Fixed static code analysis bugs in convention with java